# moss

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_flags.txt  cpu.cpp  cpu.h  main.cpp  vcpkg.json
.github/workflows/: ci.yml
cmake/: moss.cmake
examples/: CMakeLists.txt  CMakePresets.json  README.md  fib.c  link.ld
include/: cpu.h  integer.h
include/moss/: cpu.h  moss.h  types.h
moss-sys/: Cargo.toml  README.md  build.rs
moss-sys/src/: bindings.rs
moss-sys/tests/: it.rs
src/: CMakeLists.txt  cpu.c  cpu.cpp  main.c  main.cpp  moss.cpp
sys/: .gitignore  Cargo.toml  build.rs
sys/src/: lib.rs
sys/tests/: it.rs
tests/: CMakeLists.txt  cpu_test.cpp  functional.cpp  processor.cpp  processor_tests.cpp
