add_library(moss STATIC moss.cpp cpu.cpp)
target_include_directories(moss PUBLIC ${CMAKE_SOURCE_DIR}/include)
if (MOSS_CXX_FLAGS)
    target_compile_options(moss PRIVATE ${MOSS_CXX_FLAGS_LIST})
endif()

add_executable(main main.cpp)
target_link_libraries(main moss)
if (MOSS_CXX_FLAGS)
    target_compile_options(main PRIVATE ${MOSS_CXX_FLAGS_LIST})
endif()
